# audiomata

./: Cargo.toml
src/: TODOS.md  main.rs  test.midi
src/archive/: main.rs  main.rs2022-10-01
