[package]
name = "audiomata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa ="0.6.0"
midir="0.8.0"
lazy_static="1.4.0"
vektoria={ git="https://github.com/sthomasb/vektoria", package="vektoria" }

